--- a/Final/style.css
+++ b/Final/style.css
@@ -21,7 +21,7 @@ color: black;
         color: aliceblue;
         font-size: 2rem;
         display: flex;
-        font-family: fantasy;
+        font-family: modern love;
         
         
     }
