--- a/Final/style.css
+++ b/Final/style.css
@@ -3,28 +3,31 @@ font-family: Arial, Helvetica, sans-serif;
 color: black;
     background-image: url(Cambodia.png); background-repeat: no-repeat;}
     /* background-color: #769ABE;} */
-    #header{
-        position: fixed;
-        top: 0%;
-        width: 100vw;
-        height: 70px;
-        line-height: 70px;
+    header { display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        background-image: url(lake.jpg);
+        background-size: 100% 100%;
+        background-repeat: no-repeat; 
+}
+    h1 {   margin: auto;
+            color: #FFFFFF;
+            font-family: Arial, Heveltica, sans-serif;
     }
     #nav{
         display: flex;
         justify-content: space-around;
         background: rgb(90,) ;
-    
+        align-items: center;
         color:#FFFFFF
     }
     #nav h1{
         color: aliceblue;
         font-size: 2rem;
         display: flex;
-        font-family: modern love;
-        
-        
-    }
+        font-family: cursive;             
+ }
     #nav ul{
         display: flex;
     
