--- a/Final/style.css
+++ b/Final/style.css
@@ -1,24 +1,25 @@
 body { font-size: 150%;
 font-family: Arial, Helvetica, sans-serif;
 color: black;
-    background-image: url(Cambodia.png); background-repeat: no-repeat;}
+    background-image: url(Cambodia1.png); background-repeat: no-repeat;}
     /* background-color: #769ABE;} */
-    header { display: flex;
+header { display: flex;
         justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        background-image: url(lake.jpg);
+        min-height: 0vh;
         background-size: 100% 100%;
         background-repeat: no-repeat; 
+        display: flex;
+        flex-wrap: wrap;
 }
-    h1 {   margin: auto;
-            color: #FFFFFF;
-            font-family: Arial, Heveltica, sans-serif;
+h1 {   margin: 50px;
+        color: #FFFFFF;
+        font-family: Georgia, sans-serif;
+        text-align: center;
+        justify-content: center;
     }
     #nav{
         display: flex;
-        justify-content: space-around;
-        background: rgb(90,) ;
+        justify-content: space-around;;
         align-items: center;
         color:#FFFFFF
     }
@@ -30,20 +31,58 @@ color: black;
  }
     #nav ul{
         display: flex;
-    
+        flex-wrap: wrap;
     }
     #nav ul li{
         list-style: none;
         padding: 3px 15px 3px 15px;
-        
-    
     }
     #nav ul li:hover,#phone a:hover,#mobile_menu ul li:hover{
         background: gray;
         cursor: pointer;
     }
-    #nav ul li a{
+    #nav ul li a {
         text-decoration: none;
         color: #FFFFFF;
-        font-size: 1em;
+        font-size: 1.2em;
+    }
+
+    #box-1 {
+        position: relative;
+        width: 300px;
+        height: 300px;
+        background-image: url(Siemreap.png);
+        background-position: center;
+        background-size: 100%;
+        background-repeat: no-repeat;
+        float: left;
+        padding: 50px;
+        margin: 50px;
+        box-shadow: #b5b5b5;
+    }
+    
+    #box-2 {
+        position: relative;
+        width: 300px;
+        height: 300px;
+        background-image: url(Battambang.png);
+        background-position: center;
+        background-size: 100%;
+        background-repeat: no-repeat;
+        float: left;
+        padding: 50px;
+        margin: 50px;
+    }
+    
+    #box-3 {
+        position: relative;
+        width: 300px;
+        height: 300px;
+        background-image: url(Kampot.png);
+        background-position: center;
+        background-size: 100%;
+        background-repeat: no-repeat;
+        float: left;
+        padding: 50px;
+        margin: 50px;
     }
