--- a/Final/style.css
+++ b/Final/style.css
@@ -1,7 +1,8 @@
 body { font-size: 150%;
 font-family: Arial, Helvetica, sans-serif;
 color: black;
-    background-image: url(Cambodia1.png); background-repeat: no-repeat;}
+    background-image: url(pp1.jpg); background-repeat: no-repeat;
+background-size: 100%;}
     /* background-color: #769ABE;} */
 header { display: flex;
         justify-content: center;
@@ -44,7 +45,7 @@ h1 {   margin: 50px;
     #nav ul li a {
         text-decoration: none;
         color: #FFFFFF;
-        font-size: 1.2em;
+        font-size: auto;
     }
 
     #box-1 {
