--- a/Final/style.css
+++ b/Final/style.css
@@ -99,5 +99,5 @@ h1 {   margin: 50px;
     text-align: center;
     font-size: 0.8em;
     font-style: bold;
-    color: #000000;
+    color: #ffffff;
     }
