--- a/Final/battambang_style.css
+++ b/Final/battambang_style.css
@@ -13,7 +13,9 @@ header { background-color: #5fa3d7;
     text-align: center;
 }
 
-body {
+body {background-color: #64a5d7;
+    height: fit-content;}
+main {
     width:auto;
     font-family: Arial, sans-serif, 'Times New Roman', Times, serif;
     background-color: #64a5d7;   
@@ -21,7 +23,6 @@ body {
 	bottom, #FFFFFF, #4494df);
     background-repeat: no-repeat;
 }
-
 
 figure { float: left;
     width: 300px;
@@ -36,13 +37,59 @@ figcaption { text-align:justify;
         font-family: Georgia, 'Times New Roman', Times, serif; 
 }
 
-
-  
-
-
 footer {
+    width: auto;
     text-align: center;
     padding: 10px;
-
+    background-color: #3b85cb;
     color: #fff;
-  }
+}
+
+@media (max-width:1024px) {
+    header { background-color: #5fa3d7;
+        background-image: url(Bat.png);
+        background-repeat: no-repeat;	
+        padding-left: 450px;
+        padding-bottom: 30px;
+        padding-top: 20px;
+        padding-right: 30px;
+        font-size: 1.3vw;
+        border-radius: 15px;
+        box-shadow: 5px 5px 5px #1e6eb9;
+        width: auto;
+        text-align: center;
+    }
+    
+    body {background-color: #64a5d7;
+        height: fit-content;}
+    main {
+        width:auto;
+        font-family: Arial, sans-serif, 'Times New Roman', Times, serif;
+        background-color: #64a5d7;   
+        background-image: linear-gradient(to 
+        bottom, #FFFFFF, #4494df);
+        background-repeat: no-repeat;
+    }
+    
+    figure { float: left;
+        width: 300px;
+        padding-bottom: 10px;
+        background-color: #aecde0;
+        margin-left: 50px;
+        border-radius: 10px;
+    }
+    
+    figcaption { text-align:justify;
+            padding: 10px;
+            font-family: Georgia, 'Times New Roman', Times, serif; 
+    }
+    
+    footer {
+        width: auto;
+        text-align: center;
+        padding: 10px;
+        background-color: #3b85cb;
+        color: #fff;
+    }
+}
+    
