--- a/Final/style_index.css
+++ b/Final/style_index.css
@@ -1,7 +1,9 @@
 body { font-size: 150%;
 font-family: Arial, Helvetica, sans-serif;
-color: black;
-    background-image: url(pp1.jpg); 
+    color: black;
+    background-color: #64a5d7;   
+    background-image: linear-gradient(to 
+    bottom, #FFFFFF, #4494df); 
     background-repeat: no-repeat;
     background-size: 100%;}
     /* background-color: #769ABE;} */
