--- a/Final/style_index.css
+++ b/Final/style_index.css
@@ -47,6 +47,7 @@ h1 {   margin: 50px;
         text-decoration: none;
         color: #FFFFFF;
         font-size: 1.2rem;
+        font-weight: bold;
     }
 
     #box-1 {
@@ -98,6 +99,6 @@ h1 {   margin: 50px;
     top: 100%;
     width: 100%;
     text-align: center;
-    font-size: 0.8em;
+    font-size: 1.2em;
     font-style: bold;
     }
