--- a/Final/battambang_style.css
+++ b/Final/battambang_style.css
@@ -1,95 +1,82 @@
 * {box-sizing:border-box}
-header { background-color: #5fa3d7;
+h1 { background-color: #5fa3d7;
     background-image: url(Bat.png);
     background-repeat: no-repeat;	
     padding-left: 450px;
-    padding-bottom: 90px;
-    padding-top: 90px;
+    padding-bottom: 120px;
+    padding-top: 120px;
     padding-right: 50px;
-    font-size: 1.3vw;
+   
     border-radius: 15px;
     box-shadow: 5px 5px 5px #1e6eb9;
     width: auto;
     text-align: center;
 }
 
-body {background-color: #64a5d7;
-    height: fit-content;}
+nav{
+    display: flex;
+    justify-content: space-around;;
+    float: right;
+    padding-top:5px;
+    
+
+    
+}
+
+nav ul{
+    display: flex;
+    flex-wrap: wrap;
+}
+nav ul li{
+    list-style: none;
+    padding: 3px 15px 3px 15px;
+}
+nav ul li:hover,#phone a:hover,#mobile_menu ul li:hover{
+    background: rgb(56, 82, 132);
+    cursor: pointer;
+}
+nav ul li a {
+    text-decoration: none;
+    color: #FFFFFF;
+    font-size: 1.2rem;
+}
+
+body {background-color: #298bd6;
+    padding-bottom: 500px;
+}
+    
+
+
 h2 {
     width:auto;
     font-family: Arial, sans-serif, 'Times New Roman', Times, serif;
     background-color: #64a5d7;   
     background-image: linear-gradient(to 
-	bottom, #FFFFFF, #4494df);
+    bottom, #FFFFFF, #4494df);
     background-repeat: no-repeat;
+    padding: 10px;
 }
-
 figure { float: left;
     width: 300px;
-    padding-bottom: 10px;
     background-color: #aecde0;
-    margin-left: 50px;
-    border-radius: 10px;
+        /* margin-left: 50px; */
+        border-radius: 10px;
+        margin: 40px;
+        position:relative;
+    
 }
 
-figcaption { text-align: center;
+figcaption { text-align: justify;
         padding: 10px;
         font-family: Georgia, 'Times New Roman', Times, serif; 
 }
 
+
+
 footer {
     width: auto;
-    text-align: center;
     padding: 10px;
-    background-color: #3b85cb;
+    background-color: #197dda;
     color: #fff;
 }
 
-@media (max-width:1024px) {
-    header { background-color: #5fa3d7;
-        background-image: url(Bat.png);
-        background-repeat: no-repeat;	
-        padding-left: 450px;
-        padding-bottom: 30px;
-        padding-top: 20px;
-        padding-right: 30px;
-        font-size: 1.3vw;
-        border-radius: 15px;
-        box-shadow: 5px 5px 5px #1e6eb9;
-        width: auto;
-        text-align: center;
-    }
-    
-    body {background-color: #64a5d7;
-        height: fit-content;}
-    main {
-        width:auto;
-        font-family: Arial, sans-serif, 'Times New Roman', Times, serif;
-        background-color: #64a5d7;   
-        background-image: linear-gradient(to 
-        bottom, #FFFFFF, #4494df);
-        background-repeat: no-repeat;
-    }
-    
-    figure { float: left;
-        width: 300px;
-        padding-bottom: 10px;
-        background-color: #aecde0;
-        margin-left: 50px;
-        border-radius: 10px;
-    }
-    
-    figcaption { text-align:justify;
-            padding: 10px;
-            font-family: Georgia, 'Times New Roman', Times, serif; 
-    }
-    
-    footer {
-        width: auto;
-        text-align: center;
-        padding: 10px;
-        background-color: #3b85cb;
-        color: #fff;
-    }
-}
-    
