--- a/Final/index_style.css
+++ b/Final/index_style.css
@@ -1,4 +1,4 @@
-body { font-size: 150%;
+body { font-size: 100%;
     font-family: Arial, Helvetica, sans-serif;
     color: black;
     background-color: #64a5d7;   
@@ -49,6 +49,7 @@ h1 {   margin: 50px;
         text-decoration: none;
         color: #FFFFFF;
         font-size: 1.2rem;
+        font-weight: bold;
     }
 
 #box-1 {
