--- a/Final/index_style.css
+++ b/Final/index_style.css
@@ -3,7 +3,7 @@ body { font-size: 100%;
     color: black;
     background-color: #64a5d7;   
     background-image: linear-gradient(to 
-    bottom, #FFFFFF, #3D52A0); 
+    bottom, #afdde5, #3D52A0); 
     background-repeat: no-repeat;
     background-size: 100%;
     }
