--- a/Final/battambang_style.css
+++ b/Final/battambang_style.css
@@ -12,35 +12,45 @@ h1 { background-color: #5fa3d7;
     width: auto;
     text-align: center;
 }
-
-nav{
-    display: flex;
-    justify-content: space-around;;
-    float: right;
-    padding-top:5px;
-    
-
-    
-}
-
-nav ul{
+header { display: flex;
+    justify-content: right;
+    min-height: 0vh;
+    background-size: 100% 100%;
+    background-repeat: no-repeat; 
     display: flex;
     flex-wrap: wrap;
 }
-nav ul li{
+#nav{
+    display: flex;
+    justify-content: space-around;;
+    align-items: center;
+    color:#FFFFFF;
+}
+#nav h1{
+    color: aliceblue;
+    font-size: 1rem;
+    display: flex;
+    font-family: cursive;             
+}
+#nav ul{
+    display: flex;
+    flex-wrap: wrap;
+}
+#nav ul li{
     list-style: none;
     padding: 3px 15px 3px 15px;
 }
-nav ul li:hover,#phone a:hover,#mobile_menu ul li:hover{
-    background: rgb(56, 82, 132);
+#nav ul li:hover,#phone a:hover,#mobile_menu ul li:hover{
+    background: gray;
     cursor: pointer;
 }
-nav ul li a {
+#nav ul li a {
     text-decoration: none;
     color: #FFFFFF;
     font-size: 1.2rem;
     font-weight: bold;
 }
+
 
 body {background-color: #298bd6;
     padding-bottom: 500px;
