--- a/Final/index_style.css
+++ b/Final/index_style.css
@@ -26,7 +26,7 @@ h1 {    margin: 50px;
         display: flex;
         justify-content: space-around;;
         align-items: center;
-        color:#FFFFFF
+        color:#FFFFFF;
     }
 #nav h1{
         color: aliceblue;
