--- a/Final/battambang_style.css
+++ b/Final/battambang_style.css
@@ -1,7 +1,11 @@
-* {box-sizing:border-box}
-h1 { background-color: #5fa3d7;
+* {
+    box-sizing: border-box;
+}
+
+h1 {
+    background-color: #5fa3d7;
     background-image: url(Bat.png);
-    background-repeat: no-repeat;	
+    background-repeat: no-repeat;
     padding-left: 450px;
     padding-bottom: 120px;
     padding-top: 120px;
@@ -13,42 +17,40 @@ h1 { background-color: #5fa3d7;
     text-align: center;
 }
 
-/* nav{
+header {
     display: flex;
-    justify-content: space-around;;
-    float: right;
-    padding-top:5px;
-    font-family: Arial, Helvetica, sans-serif;
-
-    
-} */
-
-header { display: flex;
     justify-content: right;
     min-height: 0vh;
     background-size: 100% 100%;
-    background-repeat: no-repeat; 
+    background-repeat: no-repeat;
     display: flex;
     flex-wrap: wrap;
 }
-nav{
+
+nav {
     display: flex;
-    justify-content: space-around;;
+    justify-content: space-around;
     align-items: center;
-    color:#FFFFFF;
+    color: #FFFFFF;
 }
-nav ul{
+
+nav ul {
     display: flex;
     flex-wrap: wrap;
 }
-nav ul li{
+
+nav ul li {
     list-style: none;
     padding: 3px 15px 3px 15px;
 }
-nav ul li:hover,#phone a:hover,#mobile_menu ul li:hover{
+
+nav ul li:hover,
+#phone a:hover,
+#mobile_menu ul li:hover {
     background: gray;
     cursor: pointer;
 }
+
 nav ul li a {
     text-decoration: none;
     color: #FFFFFF;
@@ -56,38 +58,34 @@ nav ul li a {
     font-weight: bold;
 }
 
-
-body {background-color: #298bd6;
-    padding-bottom: 500px;
+body {
+    background-color: #298bd6;
     font-family: Arial, sans-serif, 'Times New Roman', Times, serif;
 }
-    
-
 
 h2 {
-    width:auto;
-    background-color: #64a5d7;   
-    background-image: linear-gradient(to 
-    bottom, #FFFFFF, #4494df);
+    width: auto;
+    background-color: #64a5d7;
+    background-image: linear-gradient(to bottom, #FFFFFF, #4494df);
     background-repeat: no-repeat;
     padding: 10px;
 }
-figure { float: left;
+
+figure {
+    float: left;
     width: 300px;
     background-color: #aecde0;
-        /* margin-left: 50px; */
-        border-radius: 10px;
-        margin: 40px;
-        position:relative;
-        box-sizing: border-box;
+    border-radius: 10px;
+    margin: 30px;
+    position: relative;
+    box-sizing: border-box;
 }
 
-figcaption { text-align: justify;
-        padding: 10px;
-        font-family:  serif, Arial, Helvetica, sans-serif; 
+figcaption {
+    text-align: justify;
+    padding: 10px;
+    font-family: serif, Arial, Helvetica, sans-serif;
 }
-
-
 
 footer {
     text-align: center;
@@ -95,5 +93,7 @@ footer {
     padding: 10px;
     background-color: #197dda;
     color: #fff;
+    clear: both;
+    position: relative; /* Set footer position to relative */
+    margin-top: -100px; /* Adjust margin to make space for footer */
 }
-
