--- a/Final/battambang_style.css
+++ b/Final/battambang_style.css
@@ -76,7 +76,8 @@ figure {
     width: 300px;
     background-color: #aecde0;
     border-radius: 10px;
-    margin: 30px;
+    /* margin: auto; */
+    justify-content: space-around;
     position: relative;
     box-sizing: border-box;
 }
