--- a/Final/battambang_style.css
+++ b/Final/battambang_style.css
@@ -77,16 +77,29 @@ figure {
     background-color: #aecde0;
     border-radius: 10px;
     margin-right: 30px;
-    justify-content: space-around;
+    margin-bottom: 20px;
+    overflow: hidden;
     position: relative;
-    box-sizing: border-box;
 }
 
 figcaption {
-    text-align: justify;
     padding: 10px;
     font-family: serif, Arial, Helvetica, sans-serif;
 }
+
+
+figcaption p {
+    text-align: center;
+    margin: 0;
+}
+
+
+figure img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+}
+
 
 footer {
     text-align: center;
